Fix mobile layout for contacts page.
This page wasn't acting responsively, when the page was
below 980px (Mobile mode) the contact icons would be too
far apart and it would look weird.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,15 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+@media screen and (max-width: 980px) {
+	.short-icons {
+		margin: 0 0 -2em 0;
+	}
+
+	#invisible-header {
+		display: none;
+	}
+}
 
 /* Tooltip container */
 .tooltip {
